# aibot

./: .gitignore  Prompts.md  config.toml  main.py  pyproject.toml  watchdog.sh
skills/: codex.md
src/aibot/: __main__.py  app.py
src/aibot/templates/agents/: experimental_creature.AGENTS.md  project_engineer.AGENTS.md
src/aibot/templates/prompts/: runtime_guardrails.md  system.md
