[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aibot"
version = "0.1.0"
description = "OpenRouter autonomous command harness"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
aibot = "aibot.app:main_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/aibot"]
